# AchaeanFleet

./: .dockerignore  .editorconfig  .gitignore  .hadolint.yaml  .markdownlint-cli2.jsonc  .markdownlint.yaml  .pip-audit-ignore.aider-chat.txt  .pre-commit-config.yaml  .trivyignore  .yamllint.yaml  .yamllint.yml  AGENTS.md  CHANGELOG.md  CI_BLOCKER.md  CI_DIAGNOSTIC.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  VERSIONING.md  VERSIONS.md  cliff.toml  justfile  pixi.toml  renovate.json  versions.yml
.github/: CI_FIX_683.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
bases/: Dockerfile.minimal  Dockerfile.node  Dockerfile.python  common-setup.sh  entrypoint.sh
compose/: .env.example  .gitignore  docker-compose.caddy.yml  docker-compose.claude-only.yml  docker-compose.mesh-workers.yml  docker-compose.mesh.yml  docker-compose.network-test.yml  docker-compose.smoke.yml
dagger/: package-lock.json  package.json  pipeline.ts  tsconfig.json
docs/: image-sizes.md  image-tagging.md  network-topology.md
hephaestus/: digest.py  tag_verify.py  tags.py
nomad/: .gitignore  PATTERNS.md  README.md  mesh.nomad.hcl  vault-policy.hcl
scripts/: build-all.sh  distribute-certs.sh  load-secrets.sh  notify-proteus.sh  pin-digests.sh  setup-agent-env.sh  tag-images.sh  update-base-digests.sh  update-goose-version.sh  validate_claude_caps.sh
tests/: build-all.bats  conftest.py  entrypoint.bats  notify-proteus.bats  test_aider_disabled.py  test_cap_validate.py  test_digest.py  test_dockerfile_pins.py  (+11 more)
vessels/hello-world/: CMakeLists.txt  Dockerfile  README.md  main.cpp
(+44 files in other folders)
